src/parser/snapshots/crochet__parser__tests__tuples-4.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = () => [a, b]\")"
---
Program {
    body: [
        VarDecl {
            span: 0..22,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lambda(
                    Lambda {
                        span: 10..22,
                        params: [],
                        body: Tuple(
                            Tuple {
                                span: 16..22,
                                elems: [
                                    Ident(
                                        Ident {
                                            span: 17..18,
                                            name: "a",
                                        },
                                    ),
                                    Ident(
                                        Ident {
                                            span: 20..21,
                                            name: "b",
                                        },
                                    ),
                                ],
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            ),
            declare: false,
        },
    ],
}
