src/parser/snapshots/crochet__parser__tests__tuples.snap
---
source: src/parser/mod.rs
expression: "parse(\"let x = []\")"
---
Program {
    body: [
        VarDecl {
            span: 0..10,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 4..5,
                    id: Ident {
                        span: 4..5,
                        name: "x",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Tuple(
                    Tuple {
                        span: 8..10,
                        elems: [],
                    },
                ),
            ),
            declare: false,
        },
    ],
}
