src/parser/snapshots/crochet__parser__tests__type_annotations-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"let msg: string = \\\"hello\\\"\")"
---
Program {
    body: [
        VarDecl {
            span: 0..25,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 4..16,
                    id: Ident {
                        span: 4..7,
                        name: "msg",
                    },
                    type_ann: Some(
                        Prim(
                            PrimType {
                                span: 9..15,
                                prim: Str,
                            },
                        ),
                    ),
                },
            ),
            init: Some(
                Lit(
                    Str(
                        Str {
                            span: 18..25,
                            value: "hello",
                        },
                    ),
                ),
            ),
            declare: false,
        },
    ],
}
