src/parser/snapshots/crochet__parser__tests__type_annotations-5.snap
---
source: src/parser/mod.rs
expression: "parse(\"let FOO: \\\"foo\\\" = \\\"foo\\\"\")"
---
Program {
    body: [
        VarDecl {
            span: 0..22,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 4..14,
                    id: Ident {
                        span: 4..7,
                        name: "FOO",
                    },
                    type_ann: Some(
                        Lit(
                            LitType {
                                span: 9..14,
                                lit: Str(
                                    Str {
                                        span: 9..14,
                                        value: "foo",
                                    },
                                ),
                            },
                        ),
                    ),
                },
            ),
            init: Some(
                Lit(
                    Str(
                        Str {
                            span: 17..22,
                            value: "foo",
                        },
                    ),
                ),
            ),
            declare: false,
        },
    ],
}
