src/parser/snapshots/crochet__parser__tests__type_annotations.snap
---
source: src/parser/mod.rs
expression: "parse(\"let x: number = 5\")"
---
Program {
    body: [
        VarDecl {
            span: 0..17,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 4..14,
                    id: Ident {
                        span: 4..5,
                        name: "x",
                    },
                    type_ann: Some(
                        Prim(
                            PrimType {
                                span: 7..13,
                                prim: Num,
                            },
                        ),
                    ),
                },
            ),
            init: Some(
                Lit(
                    Num(
                        Num {
                            span: 16..17,
                            value: "5",
                        },
                    ),
                ),
            ),
            declare: false,
        },
    ],
}
