src/parser/snapshots/crochet__parser__tests__types-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"declare let get_bar: (Foo) => T\")"
---
Program {
    body: [
        VarDecl {
            span: 0..31,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 12..31,
                    id: Ident {
                        span: 12..19,
                        name: "get_bar",
                    },
                    type_ann: Some(
                        Lam(
                            LamType {
                                span: 21..31,
                                params: [
                                    TypeRef(
                                        TypeRef {
                                            span: 22..25,
                                            name: "Foo",
                                            type_params: None,
                                        },
                                    ),
                                ],
                                ret: TypeRef(
                                    TypeRef {
                                        span: 30..31,
                                        name: "T",
                                        type_params: None,
                                    },
                                ),
                                type_params: None,
                            },
                        ),
                    ),
                },
            ),
            init: None,
            declare: true,
        },
    ],
}
